// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PolicySetOps createPolicySet() 1: Create non-existing policy set [FrodoTestPolicySet3] 1`] = `
{
  "applicationType": "iPlanetAMWebAgentService",
  "attributeNames": [],
  "conditions": [
    "Script",
    "AMIdentityMembership",
    "IPv6",
    "IPv4",
    "SimpleTime",
    "LEAuthLevel",
    "LDAPFilter",
    "AuthScheme",
    "Session",
    "AND",
    "AuthenticateToRealm",
    "ResourceEnvIP",
    "Policy",
    "OAuth2Scope",
    "SessionProperty",
    "OR",
    "Transaction",
    "NOT",
    "AuthLevel",
    "AuthenticateToService",
  ],
  "createdBy": "id=b672336b-41ef-428d-ae4a-e0c082875377,ou=user,ou=am-config",
  "creationDate": 1691207521791,
  "description": null,
  "displayName": "Frodo Test Policy Set Template",
  "editable": true,
  "entitlementCombiner": "DenyOverride",
  "lastModifiedBy": "id=b672336b-41ef-428d-ae4a-e0c082875377,ou=user,ou=am-config",
  "lastModifiedDate": 1691207521791,
  "name": "FrodoTestPolicySet3",
  "resourceComparator": null,
  "resourceTypeUuids": [
    "76656a38-5f8e-401b-83aa-4ccb74ce88d2",
  ],
  "saveIndex": null,
  "searchIndex": null,
  "subjects": [
    "AuthenticatedUsers",
    "NOT",
    "Identity",
    "OR",
    "AND",
    "NONE",
    "Policy",
    "JwtClaim",
  ],
}
`;

exports[`PolicySetOps createPolicySet() 2: Create existing policy set [FrodoTestPolicySet4] 1`] = `
{
  "code": 409,
  "message": "Application already exists",
  "reason": "Conflict",
}
`;

exports[`PolicySetOps deletePolicySet() 1: Delete existing policy set [FrodoTestPolicySet7] 1`] = `{}`;

exports[`PolicySetOps deletePolicySet() 2: Delete non-existing policy set [DoesNotExist] 1`] = `
{
  "code": 404,
  "message": "DoesNotExist application not found in realm.",
  "reason": "Not Found",
}
`;

exports[`PolicySetOps exportPolicySet() 1: Export existing policy set w/o deps [FrodoTestPolicySet9] 1`] = `
{
  "meta": Any<Object>,
  "policy": {},
  "policyset": {
    "FrodoTestPolicySet9": {
      "applicationType": "iPlanetAMWebAgentService",
      "attributeNames": [],
      "conditions": [
        "Script",
        "AMIdentityMembership",
        "IPv6",
        "IPv4",
        "SimpleTime",
        "LEAuthLevel",
        "LDAPFilter",
        "AuthScheme",
        "Session",
        "AND",
        "AuthenticateToRealm",
        "ResourceEnvIP",
        "Policy",
        "OAuth2Scope",
        "SessionProperty",
        "OR",
        "Transaction",
        "NOT",
        "AuthLevel",
        "AuthenticateToService",
      ],
      "createdBy": "id=b672336b-41ef-428d-ae4a-e0c082875377,ou=user,ou=am-config",
      "creationDate": 1691207521138,
      "description": null,
      "displayName": "Frodo Test Policy Set Template",
      "editable": true,
      "entitlementCombiner": "DenyOverride",
      "lastModifiedBy": "id=b672336b-41ef-428d-ae4a-e0c082875377,ou=user,ou=am-config",
      "lastModifiedDate": 1691207521138,
      "name": "FrodoTestPolicySet9",
      "resourceComparator": null,
      "resourceTypeUuids": [
        "76656a38-5f8e-401b-83aa-4ccb74ce88d2",
      ],
      "saveIndex": null,
      "searchIndex": null,
      "subjects": [
        "AuthenticatedUsers",
        "NOT",
        "Identity",
        "OR",
        "AND",
        "NONE",
        "Policy",
        "JwtClaim",
      ],
    },
  },
  "resourcetype": {},
  "script": {},
}
`;

exports[`PolicySetOps exportPolicySet() 2: Export existing policy set w/ deps [FrodoTestPolicySet9] 1`] = `
{
  "meta": Any<Object>,
  "policy": {},
  "policyset": {
    "FrodoTestPolicySet9": {
      "applicationType": "iPlanetAMWebAgentService",
      "attributeNames": [],
      "conditions": [
        "Script",
        "AMIdentityMembership",
        "IPv6",
        "IPv4",
        "SimpleTime",
        "LEAuthLevel",
        "LDAPFilter",
        "AuthScheme",
        "Session",
        "AND",
        "AuthenticateToRealm",
        "ResourceEnvIP",
        "Policy",
        "OAuth2Scope",
        "SessionProperty",
        "OR",
        "Transaction",
        "NOT",
        "AuthLevel",
        "AuthenticateToService",
      ],
      "createdBy": "id=b672336b-41ef-428d-ae4a-e0c082875377,ou=user,ou=am-config",
      "creationDate": 1691207521138,
      "description": null,
      "displayName": "Frodo Test Policy Set Template",
      "editable": true,
      "entitlementCombiner": "DenyOverride",
      "lastModifiedBy": "id=b672336b-41ef-428d-ae4a-e0c082875377,ou=user,ou=am-config",
      "lastModifiedDate": 1691207521138,
      "name": "FrodoTestPolicySet9",
      "resourceComparator": null,
      "resourceTypeUuids": [
        "76656a38-5f8e-401b-83aa-4ccb74ce88d2",
      ],
      "saveIndex": null,
      "searchIndex": null,
      "subjects": [
        "AuthenticatedUsers",
        "NOT",
        "Identity",
        "OR",
        "AND",
        "NONE",
        "Policy",
        "JwtClaim",
      ],
    },
  },
  "resourcetype": {},
  "script": {},
}
`;

exports[`PolicySetOps exportPolicySet() 3: Export non-existing policy set [DoesNotExist] 1`] = `
"Export error:
Request failed with status code 404"
`;

exports[`PolicySetOps exportPolicySets() 1: Export all policy sets 1`] = `
{
  "meta": Any<Object>,
  "policy": {},
  "policyset": {
    "FrodoTestPolicySet1": {
      "applicationType": "iPlanetAMWebAgentService",
      "attributeNames": [],
      "conditions": [
        "Script",
        "AMIdentityMembership",
        "IPv6",
        "IPv4",
        "SimpleTime",
        "LEAuthLevel",
        "LDAPFilter",
        "AuthScheme",
        "Session",
        "AND",
        "AuthenticateToRealm",
        "ResourceEnvIP",
        "Policy",
        "OAuth2Scope",
        "SessionProperty",
        "OR",
        "Transaction",
        "NOT",
        "AuthLevel",
        "AuthenticateToService",
      ],
      "createdBy": "id=b672336b-41ef-428d-ae4a-e0c082875377,ou=user,ou=am-config",
      "creationDate": 1691207520221,
      "description": null,
      "displayName": "Frodo Test Policy Set Template",
      "editable": true,
      "entitlementCombiner": "DenyOverride",
      "lastModifiedBy": "id=b672336b-41ef-428d-ae4a-e0c082875377,ou=user,ou=am-config",
      "lastModifiedDate": 1691207520221,
      "name": "FrodoTestPolicySet1",
      "resourceComparator": null,
      "resourceTypeUuids": [
        "76656a38-5f8e-401b-83aa-4ccb74ce88d2",
      ],
      "saveIndex": null,
      "searchIndex": null,
      "subjects": [
        "AuthenticatedUsers",
        "NOT",
        "Identity",
        "OR",
        "AND",
        "NONE",
        "Policy",
        "JwtClaim",
      ],
    },
    "FrodoTestPolicySet3": {
      "applicationType": "iPlanetAMWebAgentService",
      "attributeNames": [],
      "conditions": [
        "Script",
        "AMIdentityMembership",
        "IPv6",
        "IPv4",
        "SimpleTime",
        "LEAuthLevel",
        "LDAPFilter",
        "AuthScheme",
        "Session",
        "AND",
        "AuthenticateToRealm",
        "ResourceEnvIP",
        "Policy",
        "OAuth2Scope",
        "SessionProperty",
        "OR",
        "Transaction",
        "NOT",
        "AuthLevel",
        "AuthenticateToService",
      ],
      "createdBy": "id=b672336b-41ef-428d-ae4a-e0c082875377,ou=user,ou=am-config",
      "creationDate": 1691207521791,
      "description": null,
      "displayName": "Frodo Test Policy Set Template",
      "editable": true,
      "entitlementCombiner": "DenyOverride",
      "lastModifiedBy": "id=b672336b-41ef-428d-ae4a-e0c082875377,ou=user,ou=am-config",
      "lastModifiedDate": 1691207521791,
      "name": "FrodoTestPolicySet3",
      "resourceComparator": null,
      "resourceTypeUuids": [
        "76656a38-5f8e-401b-83aa-4ccb74ce88d2",
      ],
      "saveIndex": null,
      "searchIndex": null,
      "subjects": [
        "AuthenticatedUsers",
        "NOT",
        "Identity",
        "OR",
        "AND",
        "NONE",
        "Policy",
        "JwtClaim",
      ],
    },
    "FrodoTestPolicySet4": {
      "applicationType": "iPlanetAMWebAgentService",
      "attributeNames": [],
      "conditions": [
        "Script",
        "AMIdentityMembership",
        "IPv6",
        "IPv4",
        "SimpleTime",
        "LEAuthLevel",
        "LDAPFilter",
        "AuthScheme",
        "Session",
        "AND",
        "AuthenticateToRealm",
        "ResourceEnvIP",
        "Policy",
        "OAuth2Scope",
        "SessionProperty",
        "OR",
        "Transaction",
        "NOT",
        "AuthLevel",
        "AuthenticateToService",
      ],
      "createdBy": "id=b672336b-41ef-428d-ae4a-e0c082875377,ou=user,ou=am-config",
      "creationDate": 1691207520462,
      "description": null,
      "displayName": "Frodo Test Policy Set Template",
      "editable": true,
      "entitlementCombiner": "DenyOverride",
      "lastModifiedBy": "id=b672336b-41ef-428d-ae4a-e0c082875377,ou=user,ou=am-config",
      "lastModifiedDate": 1691207520462,
      "name": "FrodoTestPolicySet4",
      "resourceComparator": null,
      "resourceTypeUuids": [
        "76656a38-5f8e-401b-83aa-4ccb74ce88d2",
      ],
      "saveIndex": null,
      "searchIndex": null,
      "subjects": [
        "AuthenticatedUsers",
        "NOT",
        "Identity",
        "OR",
        "AND",
        "NONE",
        "Policy",
        "JwtClaim",
      ],
    },
    "FrodoTestPolicySet5": {
      "applicationType": "iPlanetAMWebAgentService",
      "attributeNames": [],
      "conditions": [
        "Script",
        "AMIdentityMembership",
        "IPv6",
        "IPv4",
        "SimpleTime",
        "LEAuthLevel",
        "LDAPFilter",
        "AuthScheme",
        "Session",
        "AND",
        "AuthenticateToRealm",
        "ResourceEnvIP",
        "Policy",
        "OAuth2Scope",
        "SessionProperty",
        "OR",
        "Transaction",
        "NOT",
        "AuthLevel",
        "AuthenticateToService",
      ],
      "createdBy": "id=b672336b-41ef-428d-ae4a-e0c082875377,ou=user,ou=am-config",
      "creationDate": 1691207520742,
      "description": null,
      "displayName": "Frodo Test Policy Set Template",
      "editable": true,
      "entitlementCombiner": "DenyOverride",
      "lastModifiedBy": "id=b672336b-41ef-428d-ae4a-e0c082875377,ou=user,ou=am-config",
      "lastModifiedDate": 1691207522213,
      "name": "FrodoTestPolicySet5",
      "resourceComparator": null,
      "resourceTypeUuids": [
        "76656a38-5f8e-401b-83aa-4ccb74ce88d2",
      ],
      "saveIndex": null,
      "searchIndex": null,
      "subjects": [
        "AuthenticatedUsers",
        "NOT",
        "Identity",
        "OR",
        "AND",
        "NONE",
        "Policy",
        "JwtClaim",
      ],
    },
    "FrodoTestPolicySet7": {
      "applicationType": "iPlanetAMWebAgentService",
      "attributeNames": [],
      "conditions": [
        "Script",
        "AMIdentityMembership",
        "IPv6",
        "IPv4",
        "SimpleTime",
        "LEAuthLevel",
        "LDAPFilter",
        "AuthScheme",
        "Session",
        "AND",
        "AuthenticateToRealm",
        "ResourceEnvIP",
        "Policy",
        "OAuth2Scope",
        "SessionProperty",
        "OR",
        "Transaction",
        "NOT",
        "AuthLevel",
        "AuthenticateToService",
      ],
      "createdBy": "id=b672336b-41ef-428d-ae4a-e0c082875377,ou=user,ou=am-config",
      "creationDate": 1691207520983,
      "description": null,
      "displayName": "Frodo Test Policy Set Template",
      "editable": true,
      "entitlementCombiner": "DenyOverride",
      "lastModifiedBy": "id=b672336b-41ef-428d-ae4a-e0c082875377,ou=user,ou=am-config",
      "lastModifiedDate": 1691207520983,
      "name": "FrodoTestPolicySet7",
      "resourceComparator": null,
      "resourceTypeUuids": [
        "76656a38-5f8e-401b-83aa-4ccb74ce88d2",
      ],
      "saveIndex": null,
      "searchIndex": null,
      "subjects": [
        "AuthenticatedUsers",
        "NOT",
        "Identity",
        "OR",
        "AND",
        "NONE",
        "Policy",
        "JwtClaim",
      ],
    },
    "FrodoTestPolicySet9": {
      "applicationType": "iPlanetAMWebAgentService",
      "attributeNames": [],
      "conditions": [
        "Script",
        "AMIdentityMembership",
        "IPv6",
        "IPv4",
        "SimpleTime",
        "LEAuthLevel",
        "LDAPFilter",
        "AuthScheme",
        "Session",
        "AND",
        "AuthenticateToRealm",
        "ResourceEnvIP",
        "Policy",
        "OAuth2Scope",
        "SessionProperty",
        "OR",
        "Transaction",
        "NOT",
        "AuthLevel",
        "AuthenticateToService",
      ],
      "createdBy": "id=b672336b-41ef-428d-ae4a-e0c082875377,ou=user,ou=am-config",
      "creationDate": 1691207521138,
      "description": null,
      "displayName": "Frodo Test Policy Set Template",
      "editable": true,
      "entitlementCombiner": "DenyOverride",
      "lastModifiedBy": "id=b672336b-41ef-428d-ae4a-e0c082875377,ou=user,ou=am-config",
      "lastModifiedDate": 1691207521138,
      "name": "FrodoTestPolicySet9",
      "resourceComparator": null,
      "resourceTypeUuids": [
        "76656a38-5f8e-401b-83aa-4ccb74ce88d2",
      ],
      "saveIndex": null,
      "searchIndex": null,
      "subjects": [
        "AuthenticatedUsers",
        "NOT",
        "Identity",
        "OR",
        "AND",
        "NONE",
        "Policy",
        "JwtClaim",
      ],
    },
  },
  "resourcetype": {},
  "script": {},
}
`;

exports[`PolicySetOps importFirstPolicySet() 1: Import first policy set 1`] = `
{
  "applicationType": "iPlanetAMWebAgentService",
  "attributeNames": [],
  "conditions": [
    "Script",
    "AMIdentityMembership",
    "IPv6",
    "IPv4",
    "SimpleTime",
    "LEAuthLevel",
    "LDAPFilter",
    "AuthScheme",
    "Session",
    "AND",
    "AuthenticateToRealm",
    "ResourceEnvIP",
    "Policy",
    "OAuth2Scope",
    "SessionProperty",
    "OR",
    "Transaction",
    "NOT",
    "AuthLevel",
    "AuthenticateToService",
  ],
  "createdBy": "id=b672336b-41ef-428d-ae4a-e0c082875377,ou=user,ou=am-config",
  "creationDate": 1691207523326,
  "description": null,
  "displayName": "Frodo Test Policy Set Template",
  "editable": true,
  "entitlementCombiner": "DenyOverride",
  "lastModifiedBy": "id=b672336b-41ef-428d-ae4a-e0c082875377,ou=user,ou=am-config",
  "lastModifiedDate": 1691207523326,
  "name": "FrodoTestPolicySet13",
  "resourceComparator": null,
  "resourceTypeUuids": [
    "76656a38-5f8e-401b-83aa-4ccb74ce88d2",
  ],
  "saveIndex": null,
  "searchIndex": null,
  "subjects": [
    "AuthenticatedUsers",
    "NOT",
    "Identity",
    "OR",
    "AND",
    "NONE",
    "Policy",
    "JwtClaim",
  ],
}
`;

exports[`PolicySetOps importPolicySet() 1: Import existing policy set [FrodoTestPolicySet11] 1`] = `
{
  "applicationType": "iPlanetAMWebAgentService",
  "attributeNames": [],
  "conditions": [
    "Script",
    "AMIdentityMembership",
    "IPv6",
    "IPv4",
    "SimpleTime",
    "LEAuthLevel",
    "LDAPFilter",
    "AuthScheme",
    "Session",
    "AND",
    "AuthenticateToRealm",
    "ResourceEnvIP",
    "Policy",
    "OAuth2Scope",
    "SessionProperty",
    "OR",
    "Transaction",
    "NOT",
    "AuthLevel",
    "AuthenticateToService",
  ],
  "createdBy": "id=b672336b-41ef-428d-ae4a-e0c082875377,ou=user,ou=am-config",
  "creationDate": 1691207523155,
  "description": null,
  "displayName": "Frodo Test Policy Set Template",
  "editable": true,
  "entitlementCombiner": "DenyOverride",
  "lastModifiedBy": "id=b672336b-41ef-428d-ae4a-e0c082875377,ou=user,ou=am-config",
  "lastModifiedDate": 1691207523155,
  "name": "FrodoTestPolicySet11",
  "resourceComparator": null,
  "resourceTypeUuids": [
    "76656a38-5f8e-401b-83aa-4ccb74ce88d2",
  ],
  "saveIndex": null,
  "searchIndex": null,
  "subjects": [
    "AuthenticatedUsers",
    "NOT",
    "Identity",
    "OR",
    "AND",
    "NONE",
    "Policy",
    "JwtClaim",
  ],
}
`;

exports[`PolicySetOps importPolicySet() 2: Import non-existing policy set [DoesNotExist] 1`] = `
"Import error:
DoesNotExist not found in import data!"
`;

exports[`PolicySetOps importPolicySets() 1: Import all policy sets 1`] = `
{
  "applicationType": "iPlanetAMWebAgentService",
  "attributeNames": [],
  "conditions": [
    "Script",
    "AMIdentityMembership",
    "IPv6",
    "IPv4",
    "SimpleTime",
    "LEAuthLevel",
    "LDAPFilter",
    "AuthScheme",
    "Session",
    "AND",
    "AuthenticateToRealm",
    "ResourceEnvIP",
    "Policy",
    "OAuth2Scope",
    "SessionProperty",
    "OR",
    "Transaction",
    "NOT",
    "AuthLevel",
    "AuthenticateToService",
  ],
  "createdBy": "id=b672336b-41ef-428d-ae4a-e0c082875377,ou=user,ou=am-config",
  "creationDate": 1691207523632,
  "description": null,
  "displayName": "Frodo Test Policy Set Template",
  "editable": true,
  "entitlementCombiner": "DenyOverride",
  "lastModifiedBy": "id=b672336b-41ef-428d-ae4a-e0c082875377,ou=user,ou=am-config",
  "lastModifiedDate": 1691207523632,
  "name": "FrodoTestPolicySet16",
  "resourceComparator": null,
  "resourceTypeUuids": [
    "76656a38-5f8e-401b-83aa-4ccb74ce88d2",
  ],
  "saveIndex": null,
  "searchIndex": null,
  "subjects": [
    "AuthenticatedUsers",
    "NOT",
    "Identity",
    "OR",
    "AND",
    "NONE",
    "Policy",
    "JwtClaim",
  ],
}
`;

exports[`PolicySetOps readPolicySet() 1: Get existing policy set [FrodoTestPolicySet1] 1`] = `
{
  "applicationType": "iPlanetAMWebAgentService",
  "attributeNames": [],
  "conditions": [
    "Script",
    "AMIdentityMembership",
    "IPv6",
    "IPv4",
    "SimpleTime",
    "LEAuthLevel",
    "LDAPFilter",
    "AuthScheme",
    "Session",
    "AND",
    "AuthenticateToRealm",
    "ResourceEnvIP",
    "Policy",
    "OAuth2Scope",
    "SessionProperty",
    "OR",
    "Transaction",
    "NOT",
    "AuthLevel",
    "AuthenticateToService",
  ],
  "createdBy": "id=b672336b-41ef-428d-ae4a-e0c082875377,ou=user,ou=am-config",
  "creationDate": 1691207520221,
  "description": null,
  "displayName": "Frodo Test Policy Set Template",
  "editable": true,
  "entitlementCombiner": "DenyOverride",
  "lastModifiedBy": "id=b672336b-41ef-428d-ae4a-e0c082875377,ou=user,ou=am-config",
  "lastModifiedDate": 1691207520221,
  "name": "FrodoTestPolicySet1",
  "resourceComparator": null,
  "resourceTypeUuids": [
    "76656a38-5f8e-401b-83aa-4ccb74ce88d2",
  ],
  "saveIndex": null,
  "searchIndex": null,
  "subjects": [
    "AuthenticatedUsers",
    "NOT",
    "Identity",
    "OR",
    "AND",
    "NONE",
    "Policy",
    "JwtClaim",
  ],
}
`;

exports[`PolicySetOps readPolicySet() 2: Get non-existing policy set [DoesNotExist] 1`] = `
{
  "code": 404,
  "message": "Unable to retrieve application under realm /alpha.",
  "reason": "Not Found",
}
`;

exports[`PolicySetOps readPolicySets() 1: Get all policy sets 1`] = `
[
  {
    "applicationType": "iPlanetAMWebAgentService",
    "attributeNames": [],
    "conditions": [
      "Script",
      "AMIdentityMembership",
      "IPv6",
      "IPv4",
      "SimpleTime",
      "LEAuthLevel",
      "LDAPFilter",
      "AuthScheme",
      "Session",
      "AND",
      "AuthenticateToRealm",
      "ResourceEnvIP",
      "Policy",
      "OAuth2Scope",
      "SessionProperty",
      "OR",
      "Transaction",
      "NOT",
      "AuthLevel",
      "AuthenticateToService",
    ],
    "createdBy": "id=b672336b-41ef-428d-ae4a-e0c082875377,ou=user,ou=am-config",
    "creationDate": 1691207520221,
    "description": null,
    "displayName": "Frodo Test Policy Set Template",
    "editable": true,
    "entitlementCombiner": "DenyOverride",
    "lastModifiedBy": "id=b672336b-41ef-428d-ae4a-e0c082875377,ou=user,ou=am-config",
    "lastModifiedDate": 1691207520221,
    "name": "FrodoTestPolicySet1",
    "resourceComparator": null,
    "resourceTypeUuids": [
      "76656a38-5f8e-401b-83aa-4ccb74ce88d2",
    ],
    "saveIndex": null,
    "searchIndex": null,
    "subjects": [
      "AuthenticatedUsers",
      "NOT",
      "Identity",
      "OR",
      "AND",
      "NONE",
      "Policy",
      "JwtClaim",
    ],
  },
  {
    "applicationType": "iPlanetAMWebAgentService",
    "attributeNames": [],
    "conditions": [
      "Script",
      "AMIdentityMembership",
      "IPv6",
      "IPv4",
      "SimpleTime",
      "LEAuthLevel",
      "LDAPFilter",
      "AuthScheme",
      "Session",
      "AND",
      "AuthenticateToRealm",
      "ResourceEnvIP",
      "Policy",
      "OAuth2Scope",
      "SessionProperty",
      "OR",
      "Transaction",
      "NOT",
      "AuthLevel",
      "AuthenticateToService",
    ],
    "createdBy": "id=b672336b-41ef-428d-ae4a-e0c082875377,ou=user,ou=am-config",
    "creationDate": 1691207520462,
    "description": null,
    "displayName": "Frodo Test Policy Set Template",
    "editable": true,
    "entitlementCombiner": "DenyOverride",
    "lastModifiedBy": "id=b672336b-41ef-428d-ae4a-e0c082875377,ou=user,ou=am-config",
    "lastModifiedDate": 1691207520462,
    "name": "FrodoTestPolicySet4",
    "resourceComparator": null,
    "resourceTypeUuids": [
      "76656a38-5f8e-401b-83aa-4ccb74ce88d2",
    ],
    "saveIndex": null,
    "searchIndex": null,
    "subjects": [
      "AuthenticatedUsers",
      "NOT",
      "Identity",
      "OR",
      "AND",
      "NONE",
      "Policy",
      "JwtClaim",
    ],
  },
  {
    "applicationType": "iPlanetAMWebAgentService",
    "attributeNames": [],
    "conditions": [
      "Script",
      "AMIdentityMembership",
      "IPv6",
      "IPv4",
      "SimpleTime",
      "LEAuthLevel",
      "LDAPFilter",
      "AuthScheme",
      "Session",
      "AND",
      "AuthenticateToRealm",
      "ResourceEnvIP",
      "Policy",
      "OAuth2Scope",
      "SessionProperty",
      "OR",
      "Transaction",
      "NOT",
      "AuthLevel",
      "AuthenticateToService",
    ],
    "createdBy": "id=b672336b-41ef-428d-ae4a-e0c082875377,ou=user,ou=am-config",
    "creationDate": 1691207520742,
    "description": null,
    "displayName": "Frodo Test Policy Set Template",
    "editable": true,
    "entitlementCombiner": "DenyOverride",
    "lastModifiedBy": "id=b672336b-41ef-428d-ae4a-e0c082875377,ou=user,ou=am-config",
    "lastModifiedDate": 1691207520742,
    "name": "FrodoTestPolicySet5",
    "resourceComparator": null,
    "resourceTypeUuids": [
      "76656a38-5f8e-401b-83aa-4ccb74ce88d2",
    ],
    "saveIndex": null,
    "searchIndex": null,
    "subjects": [
      "AuthenticatedUsers",
      "NOT",
      "Identity",
      "OR",
      "AND",
      "NONE",
      "Policy",
      "JwtClaim",
    ],
  },
  {
    "applicationType": "iPlanetAMWebAgentService",
    "attributeNames": [],
    "conditions": [
      "Script",
      "AMIdentityMembership",
      "IPv6",
      "IPv4",
      "SimpleTime",
      "LEAuthLevel",
      "LDAPFilter",
      "AuthScheme",
      "Session",
      "AND",
      "AuthenticateToRealm",
      "ResourceEnvIP",
      "Policy",
      "OAuth2Scope",
      "SessionProperty",
      "OR",
      "Transaction",
      "NOT",
      "AuthLevel",
      "AuthenticateToService",
    ],
    "createdBy": "id=b672336b-41ef-428d-ae4a-e0c082875377,ou=user,ou=am-config",
    "creationDate": 1691207520983,
    "description": null,
    "displayName": "Frodo Test Policy Set Template",
    "editable": true,
    "entitlementCombiner": "DenyOverride",
    "lastModifiedBy": "id=b672336b-41ef-428d-ae4a-e0c082875377,ou=user,ou=am-config",
    "lastModifiedDate": 1691207520983,
    "name": "FrodoTestPolicySet7",
    "resourceComparator": null,
    "resourceTypeUuids": [
      "76656a38-5f8e-401b-83aa-4ccb74ce88d2",
    ],
    "saveIndex": null,
    "searchIndex": null,
    "subjects": [
      "AuthenticatedUsers",
      "NOT",
      "Identity",
      "OR",
      "AND",
      "NONE",
      "Policy",
      "JwtClaim",
    ],
  },
  {
    "applicationType": "iPlanetAMWebAgentService",
    "attributeNames": [],
    "conditions": [
      "Script",
      "AMIdentityMembership",
      "IPv6",
      "IPv4",
      "SimpleTime",
      "LEAuthLevel",
      "LDAPFilter",
      "AuthScheme",
      "Session",
      "AND",
      "AuthenticateToRealm",
      "ResourceEnvIP",
      "Policy",
      "OAuth2Scope",
      "SessionProperty",
      "OR",
      "Transaction",
      "NOT",
      "AuthLevel",
      "AuthenticateToService",
    ],
    "createdBy": "id=b672336b-41ef-428d-ae4a-e0c082875377,ou=user,ou=am-config",
    "creationDate": 1691207521138,
    "description": null,
    "displayName": "Frodo Test Policy Set Template",
    "editable": true,
    "entitlementCombiner": "DenyOverride",
    "lastModifiedBy": "id=b672336b-41ef-428d-ae4a-e0c082875377,ou=user,ou=am-config",
    "lastModifiedDate": 1691207521138,
    "name": "FrodoTestPolicySet9",
    "resourceComparator": null,
    "resourceTypeUuids": [
      "76656a38-5f8e-401b-83aa-4ccb74ce88d2",
    ],
    "saveIndex": null,
    "searchIndex": null,
    "subjects": [
      "AuthenticatedUsers",
      "NOT",
      "Identity",
      "OR",
      "AND",
      "NONE",
      "Policy",
      "JwtClaim",
    ],
  },
]
`;

exports[`PolicySetOps updatePolicySet() 1: Update existing policy set [FrodoTestPolicySet5] 1`] = `
{
  "applicationType": "iPlanetAMWebAgentService",
  "attributeNames": [],
  "conditions": [
    "Script",
    "AMIdentityMembership",
    "IPv6",
    "IPv4",
    "SimpleTime",
    "LEAuthLevel",
    "LDAPFilter",
    "AuthScheme",
    "Session",
    "AND",
    "AuthenticateToRealm",
    "ResourceEnvIP",
    "Policy",
    "OAuth2Scope",
    "SessionProperty",
    "OR",
    "Transaction",
    "NOT",
    "AuthLevel",
    "AuthenticateToService",
  ],
  "createdBy": "id=b672336b-41ef-428d-ae4a-e0c082875377,ou=user,ou=am-config",
  "creationDate": 1691207520742,
  "description": null,
  "displayName": "Frodo Test Policy Set Template",
  "editable": true,
  "entitlementCombiner": "DenyOverride",
  "lastModifiedBy": "id=b672336b-41ef-428d-ae4a-e0c082875377,ou=user,ou=am-config",
  "lastModifiedDate": 1691207522213,
  "name": "FrodoTestPolicySet5",
  "resourceComparator": null,
  "resourceTypeUuids": [
    "76656a38-5f8e-401b-83aa-4ccb74ce88d2",
  ],
  "saveIndex": null,
  "searchIndex": null,
  "subjects": [
    "AuthenticatedUsers",
    "NOT",
    "Identity",
    "OR",
    "AND",
    "NONE",
    "Policy",
    "JwtClaim",
  ],
}
`;

exports[`PolicySetOps updatePolicySet() 2: Update non-existing policy set [FrodoTestPolicySet6] 1`] = `
{
  "code": 404,
  "message": "FrodoTestPolicySet6 not found.",
  "reason": "Not Found",
}
`;
